// Copyright (C) 2020 Ellen Poe
//
// This file is part of MASS.
//
// MASS is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// MASS is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with MASS.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";
package api;

message Weapon {
  enum AmmoType {
    AMMO_TYPE_UNKNOWN = 0;
    TORPEDO = 1;
    COUNTERMEASURE = 2;
  }
  // The type (e.g. torpedo, missile)
  AmmoType type = 1;
  // The vessel descriptor to spawn when this weapon is fired.
  string weapon_vessel_descriptor = 2;
  // The user-facing name of the weapon.
  string name = 3;
}

message Armament {
  // The weapon.
  Weapon weapon = 1;
  // The number available.
  uint32 count = 2;
}
